--- a/HomeLedApp/UI/MainPage.xaml
+++ b/HomeLedApp/UI/MainPage.xaml
@@ -132,7 +132,7 @@
                     <ui:SliderElement Grid.Row="4" TitleResource="White" Property="Model.White2" x:Name="WhiteSlider2" ColorBindingPath="Model.CurrentColor2" DetailSteps="true"/>
                     <BoxView x:Name="PreviewColor2" Grid.Row="2" Grid.RowSpan="2" Grid.Column="1" BackgroundColor="{Binding Model.CurrentColor2, Mode=OneWay, Converter={StaticResource IO_RemoveWhite}}" CornerRadius="15" Margin="5"/>
                     <BoxView x:Name="PreviewWhite2" Grid.Row="4" Grid.RowSpan="1" Grid.Column="1" BackgroundColor="{Binding Model.CurrentColor2, Mode=OneWay, Converter={StaticResource IO_JustWhite}}" CornerRadius="15" Margin="5"/>
-                    <!--<Line Grid.Row="4" X1="0" Y1="0" X2="10000" Y2="0" Stroke="DarkBlue" StrokeDashArray="1,2" StrokeThickness="3" StrokeDashOffset="6" HeightRequest="2" />-->
+                    <Line Grid.Row="5" X1="0" Y1="0" X2="10000" Y2="0" Stroke="DarkBlue" StrokeDashArray="1,2" StrokeThickness="3" StrokeDashOffset="6" HeightRequest="2" />
                 </Grid>
                 <ui:SliderElement TitleResource="Width" Property="Model.Width" x:Name="WidthSlider" DetailSteps="true"/>
                 <ui:SliderElement TitleResource="Fringe" Property="Model.Fringe" x:Name="FringeSlider" DetailSteps="true"/>
